--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+				
 	</dependencies>
 
 	<build>
